Ramesh: Added postgres backend support, configuration to load the db, refactored code to work with DB using go-pg
