# handlers/post.go
@@ -12,13 +12,21 @@ import (
 // swagger:route POST /items items createItem
 // Create a new Eatable item
 // responses:
-//	200: itemResponse
+//	200: messageResponse
 //  422: errorValidation
 //  501: errorResponse
 func (items *Items) Create(rw http.ResponseWriter, r *http.Request) {
 	it := r.Context().Value(KeyItem{}).(data.Item)
 	it.SKU = uuid.New().String()
-	rw.Header().Add("Content-Type", "application/json")
 	items.l.Debug("Inserting item", "item", it)
-	items.itemDB.AddNewItem(it)
+	err := items.itemDB.AddNewItem(it)
+	rw.Header().Add("Content-Type", "application/json")
+	if err != nil {
+		rw.WriteHeader(http.StatusUnprocessableEntity)
+		items.l.Error("Error Adding Item", "error", err)
+		data.ToJSON(&GenericMessage{Message: err.Error()}, rw)
+		return
+	}
+	rw.WriteHeader(http.StatusOK)
+	data.ToJSON(&GenericMessage{Message: "Item Successfully Added"}, rw)
 }
