# swagger.yaml
@@ -3,26 +3,30 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError GenericError GenericError holds a message string to be sent as JSON
+    description: GenericError GenericError GenericError GenericError holds a message string to be sent as JSON
     properties:
       Message:
         description: message
         type: string
     type: object
     x-go-package: github.com/rramesh/eatables/sdk/models
+  GenericMessage:
+    description: GenericMessage holds a message string to be sent as JSON
+    properties:
+      Message:
+        type: string
+    type: object
+    x-go-package: github.com/rramesh/eatables/handlers
   Item:
     description: Item defines the structure for an API Food Item
     properties:
       availableTimes:
         description: |-
           What times this item is available.
-          Range provided as Array of Array of two strings
-        example:
-        - - "7:00"
-          - "11:30"
-        - - "17:00"
-          - "22:30"
+          Range provided as Array of map consisiting of from and to times as integers represented in minutes
+        example: '[{From: 360, To: 660}, {From: 1020, To: 1350}]'
         items:
+          $ref: '#/definitions/TimeRange'
           items:
             type: string
           type: array
@@ -80,14 +84,14 @@ definitions:
       price:
         description: Price of this Item
         example: 75
-        format: float
+        format: double
         minimum: 0.01
         type: number
         x-go-name: Price
       sku:
         description: The SKU of this Item. UUID format
-        example: AB89C89F3897XMC7
-        pattern: '[a-zA-Z0-9]{12}'
+        example: b5113148-d1fc-4c17-8177-519120495b4c
+        pattern: '[a-zA-Z0-9]{36}'
         type: string
         x-go-name: SKU
       tags:
@@ -105,8 +109,8 @@ definitions:
         x-go-name: Tags
       vendorCode:
         description: The Vendor Code of this Item. UUID format
-        example: 3X89238FASP287YR
-        pattern: '[a-zA-Z0-9]{12}'
+        example: ee846edd-b2ee-4ab2-bd97-2c4246c56cf5
+        pattern: '[a-zA-Z0-9]{36}'
         type: string
         x-go-name: VendorCode
     required:
@@ -117,8 +121,21 @@ definitions:
     - vendorCode
     type: object
     x-go-package: github.com/rramesh/eatables/data
+  TimeRange:
+    description: TimeRange holds a starting and ending time
+    properties:
+      from:
+        format: uint32
+        type: integer
+        x-go-name: From
+      to:
+        format: uint32
+        type: integer
+        x-go-name: To
+    type: object
+    x-go-package: github.com/rramesh/eatables/data
   ValidationError:
-    description: ValidationError ValidationError ValidationError holds a slice of error messages to be sent as JSON
+    description: ValidationError ValidationError ValidationError ValidationError holds a slice of error messages to be sent as JSON
     properties:
       Message:
         description: message
@@ -155,7 +172,7 @@ paths:
           $ref: '#/definitions/Item'
       responses:
         "200":
-          $ref: '#/responses/itemResponse'
+          $ref: '#/responses/messageResponse'
         "422":
           $ref: '#/responses/errorValidation'
         "501":
@@ -175,8 +192,8 @@ paths:
         schema:
           $ref: '#/definitions/Item'
       responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
+        "200":
+          $ref: '#/responses/messageResponse'
         "404":
           $ref: '#/responses/errorResponse'
         "422":
@@ -196,8 +213,8 @@ paths:
         type: integer
         x-go-name: ID
       responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
+        "200":
+          $ref: '#/responses/messageResponse'
         "404":
           $ref: '#/responses/errorResponse'
         "501":
@@ -264,7 +281,7 @@ responses:
   errorResponse:
     description: Generic error message returned as a string
     schema:
-      $ref: '#/definitions/GenericError'
+      $ref: '#/definitions/GenericMessage'
   errorValidation:
     description: Validation errors defined as an array of strings
     schema:
@@ -272,9 +289,17 @@ responses:
   itemResponse:
     description: A list of eatable items returned in the response
     schema:
-      items:
-        $ref: '#/definitions/Item'
-      type: array
+      properties:
+        items:
+          items:
+            $ref: '#/definitions/Item'
+          type: array
+          x-go-name: Items
+      type: object
+  messageResponse:
+    description: Generic message returned as a string
+    schema:
+      $ref: '#/definitions/GenericMessage'
   noContentResponse:
     description: No content is returned by this API endpoint
 schemes:
